Update popup page to better align "New Rule Button", fix #14963

--- a/chromium/pages/popup/style.css
+++ b/chromium/pages/popup/style.css
@@ -83,6 +83,12 @@ input[type='checkbox'] {
   vertical-align: middle;
 }
 
+input[type='text'] {
+  width: 100%;
+  margin-top: 0.4em;
+  margin-bottom: 0.4em;
+}
+
 .rule img.remove {
   float: right;
 }
